--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
+  "prisma": {
+    "seed": "npx tsx prisma/seed/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -27,6 +30,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.97.20",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -37,5 +42,8 @@
     "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "@snaplet/seed": {
+    "config": "prisma/seed/seed.config.ts"
   }
 }
