--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@tanstack/react-table": "^8.13.2",
     "@vercel/postgres": "^0.7.2",
     "class-variance-authority": "^0.7.0",
