--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "test": "jest",
     "lint": "next lint",
-    "sync": "npx @snaplet/seed sync",
+    "sync": "prisma generate && npx @snaplet/seed sync",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "prisma": {
@@ -43,29 +43,33 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.25.7",
-    "@snaplet/copycat": "^5.0.0",
-    "@snaplet/seed": "^0.97.20",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^20",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "prisma": "^5.11.0",
-    "tailwindcss": "^3.3.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "@babel/preset-typescript": "7.25.7",
+    "@snaplet/copycat": "5.0.0",
+    "@snaplet/seed": "0.97.20",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@types/jest": "29.5.13",
+    "@types/node": "20",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.12.2",
+    "autoprefixer": "10.0.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.0.2",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "postcss": "8.5.1",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "prisma": "5.11.0",
+    "tailwindcss": "3.4.17",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "^5.3.2"
   },
   "@snaplet/seed": {
     "config": "prisma/seed/seed.config.ts"
