--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "3.9.0",
     "@prisma/client": "5.11.0",
-    "@radix-ui/react-dialog": "1.1.1",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-popover": "1.1.1",
-    "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.1",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
     "@tanstack/react-query": "5.55.0",
     "@tanstack/react-table": "8.13.2",
     "@vercel/analytics": "1.3.1",
     "@vercel/postgres": "0.7.2",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.0",
+    "clsx": "2.1.1",
     "cmdk": "1.0.0",
-    "lucide-react": "0.358.0",
-    "next": "14.1.3",
+    "lucide-react": "0.476.0",
+    "next": "15.2.0",
     "next-auth": "4.24.7",
-    "next-themes": "0.3.0",
-    "react": "18",
-    "react-dom": "18",
+    "next-themes": "0.4.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "7.53.0",
-    "tailwind-merge": "2.2.2",
+    "tailwind-merge": "3.0.2",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.23.8"
   },
@@ -46,17 +46,17 @@
     "@babel/preset-typescript": "7.25.7",
     "@snaplet/copycat": "5.0.0",
     "@snaplet/seed": "0.97.20",
+    "@tailwindcss/postcss": "^4.0.9",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/react": "16.0.1",
+    "@testing-library/react": "16.2.0",
     "@types/jest": "29.5.13",
     "@types/node": "20",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "8.12.2",
-    "autoprefixer": "10.0.1",
-    "eslint": "8.57.1",
-    "eslint-config-next": "15.0.2",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "5.2.1",
@@ -64,9 +64,9 @@
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.5.1",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "prisma": "5.11.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.9",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "^5.3.2"
