--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.25.7",
+    "@next/eslint-plugin-next": "^15.2.2",
     "@snaplet/copycat": "5.0.0",
     "@snaplet/seed": "0.97.20",
     "@tailwindcss/postcss": "^4.0.9",
@@ -60,6 +61,8 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.5.1",
@@ -69,7 +72,8 @@
     "tailwindcss": "4.0.9",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "typescript-eslint": "^8.26.1"
   },
   "@snaplet/seed": {
     "config": "prisma/seed/seed.config.ts"
