--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.53.0",
+    "sonner": "^2.0.2",
     "tailwind-merge": "3.0.2",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.23.8"
