--- a/.github/workflows/basic-checks.yml
+++ b/.github/workflows/basic-checks.yml
@@ -17,16 +17,16 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
+        cache: 'pnpm'
 
     - name: Install dependencies
-      run: npm install
+      run: pnpm install
 
     - name: Run ESLint
-      run: npm run lint
+      run: pnpm run lint
 
     - name: Build Next.js
-      run: npm run build
+      run: pnpm run build
 
     - name: Run tests
-      run: npm test
+      run: pnpm test
