--- a/.github/workflows/basic-checks.yml
+++ b/.github/workflows/basic-checks.yml
@@ -2,31 +2,34 @@ name: Basic checks
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   basic-checks:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'pnpm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
 
-    - name: Install dependencies
-      run: pnpm install
+      - name: Install pnpm
+        run: npm install -g pnpm
 
-    - name: Run ESLint
-      run: pnpm run lint
+      - name: Install dependencies
+        run: pnpm install
 
-    - name: Build Next.js
-      run: pnpm run build
+      - name: Run ESLint
+        run: pnpm run lint
 
-    - name: Run tests
-      run: pnpm test
+      - name: Build Next.js
+        run: pnpm run build
+
+      - name: Run tests
+        run: pnpm test
