--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "test": "jest",
     "lint": "next lint",
-    "sync": "npx prisma generate && npx @snaplet/seed sync",
+    "sync": "prisma generate && npx @snaplet/seed sync",
     "vercel-build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "prisma": {
@@ -17,7 +17,7 @@
   "dependencies": {
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "3.9.0",
-    "@prisma/client": "5.11.0",
+    "@prisma/client": "6.5.0",
     "@radix-ui/react-dialog": "1.1.6",
     "@radix-ui/react-dropdown-menu": "2.1.6",
     "@radix-ui/react-label": "2.1.2",
@@ -69,7 +69,7 @@
     "postcss": "8.5.1",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "prisma": "5.11.0",
+    "prisma": "6.5.0",
     "tailwindcss": "4.0.9",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
