--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "next lint",
     "sync": "prisma generate && npx @snaplet/seed sync",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "migrate": "prisma migrate deploy",
+    "vercel-build": "prisma generate && pnpm run migrate && pnpm run build"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed/seed.ts"
@@ -53,7 +54,7 @@
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.2.0",
     "@types/jest": "29.5.13",
-    "@types/node": "20",
+    "@types/node": "^20.17.19",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "8.12.2",
@@ -73,7 +74,7 @@
     "tailwindcss": "4.0.9",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "^5.3.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.26.1"
   },
   "@snaplet/seed": {
