--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "sync": "prisma generate && npx @snaplet/seed sync",
     "migrate": "prisma migrate deploy",
-    "vercel-build": "prisma generate && pnpm run migrate && pnpm run build"
+    "vercel-build": "prisma generate && run migrate && run build"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed/seed.ts"
@@ -31,10 +31,10 @@
     "@vercel/postgres": "0.7.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "1.1.1",
     "lucide-react": "0.476.0",
     "next": "15.2.0",
-    "next-auth": "4.24.7",
+    "next-auth": "4.24.11",
     "next-themes": "0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
