--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "skill-stacker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.25.7",
+    "@eslint/js": "^9.23.0",
     "@next/eslint-plugin-next": "^15.2.2",
     "@snaplet/copycat": "5.0.0",
     "@snaplet/seed": "0.97.20",
@@ -63,6 +65,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
     "jest": "29.7.0",
