--- a/.github/workflows/basic-checks.yml
+++ b/.github/workflows/basic-checks.yml
@@ -2,31 +2,36 @@ name: Basic checks
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   basic-checks:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 10.7.1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
+      - name: Install dependencies
+        run: pnpm install --no-frozen-lockfile
 
-    - name: Install dependencies
-      run: npm install
+      - name: Generate Prisma Client
+        run: pnpm prisma generate
 
-    - name: Run ESLint
-      run: npm run lint
+      - name: Run ESLint
+        run: pnpm run lint
 
-    - name: Build Next.js
-      run: npm run build
+      - name: Build Next.js
+        run: pnpm run build
 
-    - name: Run tests
-      run: npm test
+      - name: Run tests
+        run: pnpm test
