--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "skill-stacker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
     "lint": "next lint",
     "sync": "prisma generate && npx @snaplet/seed sync",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "migrate": "prisma migrate deploy",
+    "vercel-build": "prisma generate && run migrate && run build"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed/seed.ts"
@@ -17,59 +19,66 @@
   "dependencies": {
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "3.9.0",
-    "@prisma/client": "5.11.0",
-    "@radix-ui/react-dialog": "1.1.1",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-popover": "1.1.1",
-    "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.1",
+    "@prisma/client": "6.5.0",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
     "@tanstack/react-query": "5.55.0",
     "@tanstack/react-table": "8.13.2",
     "@vercel/analytics": "1.3.1",
     "@vercel/postgres": "0.7.2",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.0",
-    "cmdk": "1.0.0",
-    "lucide-react": "0.358.0",
-    "next": "14.1.3",
-    "next-auth": "4.24.7",
-    "next-themes": "0.3.0",
-    "react": "18",
-    "react-dom": "18",
+    "clsx": "2.1.1",
+    "cmdk": "1.1.1",
+    "lucide-react": "0.476.0",
+    "next": "15.2.0",
+    "next-auth": "4.24.11",
+    "next-themes": "0.4.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "7.53.0",
-    "tailwind-merge": "2.2.2",
+    "sonner": "^2.0.2",
+    "tailwind-merge": "3.0.2",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.25.7",
+    "@eslint/js": "^9.23.0",
+    "@next/eslint-plugin-next": "^15.2.2",
     "@snaplet/copycat": "5.0.0",
     "@snaplet/seed": "0.97.20",
+    "@tailwindcss/postcss": "^4.0.9",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/react": "16.0.1",
+    "@testing-library/react": "16.2.0",
     "@types/jest": "29.5.13",
-    "@types/node": "20",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
+    "@types/node": "^20.17.19",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "8.12.2",
-    "autoprefixer": "10.0.1",
-    "eslint": "8.57.1",
-    "eslint-config-next": "15.0.2",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.5.1",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
-    "prisma": "5.11.0",
-    "tailwindcss": "3.4.17",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "prisma": "6.5.0",
+    "tailwindcss": "4.0.9",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.26.1"
   },
   "@snaplet/seed": {
     "config": "prisma/seed/seed.config.ts"
